<resources>
    <string name="app_name">BITFUTURE</string>
    <string name="http_error_null">空数据异常</string>
    <string name="http_error_timeout">网络请求超时</string>
    <string name="http_error_network">网络异常</string>
    <string name="http_error_parse">数据解析异常</string>
    <string name="http_error_server">服务器有事出去一会儿稍等一下,马上回来</string>
    <string name="data_parse_error">DATA 数据解析异常</string>
    <string name="restart_app">重启应用</string>
    <string name="cut">剪切</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="user_invalid">用户已过期，请重新登录</string>
    <string name="not_deal">未成交</string>
    <string name="deal_with_arrow">完全成交></string>
    <string name="revoking">撤单中</string>
    <string name="revoked">已撤单</string>
    <string name="part_deal_with_arrow">部分成交></string>
    <string name="system_revoked">系统撤单</string>
    <string name="part_deal_part_revoked_with_arrow">部分成交已撤单></string>
    <string name="unknown_status">未知状态</string>
    <string name="revoke_order">撤单</string>
    <string name="entrust_price_x">委托价 (%1$s)</string>
    <string name="entrust_volume_x">委托量 (%1$s)</string>
    <string name="actual_deal_x">实际成交 (%1$s)</string>
    <string name="deal_total_amt_x">成交总额 (%1$s)</string>
    <string name="deal_average_price_x">成交均价 (%1$s)</string>
    <string name="deal_volume_x">成交量 (%1$s)</string>
    <string name="deal_price">成交价</string>
    <string name="deal_volume">成交量</string>
    <string name="fee">手续费</string>
    <string name="filter">筛选</string>
    <string name="please_chose_counter_currency">请选择计价货币</string>
    <string name="please_select_portrait">请选择头像</string>
    <string name="please_select_image">请选择图片</string>
    <string name="take_phone_from_camera">拍照</string>
    <string name="look_big_picture">查看大图</string>
    <string name="take_phone_from_phone">从相册选择</string>
    <string name="take_phone_cancel">取消</string>
    <string name="click_login">点击登录</string>
    <string name="property">我的资产</string>
    <string name="trade_order_log">委托记录</string>
    <string name="legal_currency_trade_order">法币订单</string>
    <string name="invite">邀请返佣</string>
    <string name="invite_friends_can_get">邀请好友可获佣</string>
    <string name="message_center">消息中心</string>
    <string name="notice_center">公告中心</string>
    <string name="safety_center">安全中心</string>
    <string name="custom_service">在线客服</string>
    <string name="settings">设置</string>
    <string name="personal_data">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="nick_name">昵称</string>
    <string name="real_name">真实姓名</string>
    <string name="phone_certification">手机认证</string>
    <string name="mail_certification">邮箱认证</string>
    <string name="certificating">认证中</string>
    <string name="primary_certification">初级认证</string>
    <string name="primary_certification_simply">初级认证</string>
    <string name="primary_certification_complete">初级验证完成</string>
    <string name="pleas_select_credentials_type">请选择证件类型</string>
    <string name="mainland_id_card">中国大陆身份证</string>
    <string name="tw_id_card">中国台湾身份证</string>
    <string name="passport">护照</string>
    <string name="type_of_certification">证件类型</string>
    <string name="certification_number">证件号码</string>
    <string name="please_input_real_name">请输入该证件的真实姓名</string>
    <string name="please_input_certification_number">请输入该证件号码</string>
    <string name="passport_code">护照编码</string>
    <string name="see_passport_sample_image_below">参考下边示例查看护照编码</string>
    <string name="advanced_certification">高级认证</string>
    <string name="advanced_certification_simply">高级认证</string>
    <string name="add_certification_pic">添加证件照片</string>
    <string name="certification_front_pic">证件正面照</string>
    <string name="certification_back_pic">证件背面照</string>
    <string name="handle_certification_pic">手持证件照</string>
    <string name="please_add_certification_front_pic">请添加证件正面照片</string>
    <string name="please_add_certification_back_pic">请添加证件背面照片</string>
    <string name="please_add_handle_certification_pic">请添加手持证件照片</string>
    <string name="submit_success">提交成功</string>
    <string name="example">示例</string>
    <string name="upload_pic_rules">照片要求：\n1. 照片文件大小不能超过4M！文件格式须为jpg或者png！\n2. 请确保照片无水印，无污渍，身份信息清晰，头像完整且非文字反向照片！\n3. 需您提供本人双手手持证件照的照片，请确保照片上证件照清晰可见，无妆容完整露出双手手臂，手持位置未遮挡证件信息，且证件未遮挡您的脸部！\n点击添加可查看示例，请提交您本人的身份材料照片。照片请勿进行PS处理！</string>
    <string name="legal_currency_pay_management">法币支付管理</string>
    <string name="legal_currency_pay">法币支付</string>
    <string name="delete_success">删除成功</string>
    <string name="really_want_to_delete">真的要删除吗？</string>
    <string name="delete">删除</string>
    <string name="add_gathering_account">添加收款方式</string>
    <string name="add_ali_pay">添加支付宝</string>
    <string name="ali_pay_account">支付宝账号</string>
    <string name="add_wechat_pay">添加微信支付</string>
    <string name="wechat_account">微信账号</string>
    <string name="name">姓名</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="add_banking_card">添加银行卡</string>
    <string name="location">地&#8195;&#8195;区</string>
    <string name="with_draw_pass">资金密码</string>
    <string name="please_input_with_draw_pass">请输入资金密码</string>
    <string name="please_input_ali_pay_account">请填写支付宝账号</string>
    <string name="please_input_wechat_account">请填写微信号</string>
    <string name="confirm_add">确认添加</string>
    <string name="own_bank_name">所属银行</string>
    <string name="account_sub_bank_name">开户支行</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="please_input_account_sub_bank_name">请填写开户支行</string>
    <string name="please_input_bank_card_number">请填写银行卡号</string>
    <string name="draw_coin_address_management">提币地址管理</string>
    <string name="cn_tw">中国台湾</string>
    <string name="cn_mainland">中国大陆</string>
    <string name="select_bank">选择银行</string>
    <string name="bank_name">银行名称</string>
    <string name="input_bank_name">请填写银行名称</string>
    <string name="bank_code">银行代码</string>
    <string name="please_input_bank_code">请填写银行代码</string>
    <string name="sub_bank_name">分行名称</string>
    <string name="please_input_sub_bank_name">请填写分行名称</string>
    <string name="bank_card_account">银行卡号</string>
    <string name="please_input_bank_card_account">请填写银行卡号</string>
    <string name="bank_card_account_name">账号户名</string>
    <string name="please_input_bank_card_account_name">请填写账号户名</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="bank_card">银行卡</string>
    <string name="alipay">支付宝</string>
    <string name="wechatpay">微信支付</string>
    <string name="wechat">微信</string>
    <string name="edit">编辑</string>
    <string name="please_set">请设置</string>
    <string name="not_set">未设置</string>
    <string name="set_nick">设置昵称</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="save">保存</string>
    <string name="update_success">更新成功</string>
    <string name="bind_phone">绑定手机</string>
    <string name="edit_phone">修改手机</string>
    <string name="used_phone_auth_code">旧手机验证码</string>
    <string name="please_input_phone_num">请输入手机号码</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="message_auth_code">短信验证码</string>
    <string name="mail_auth_code">邮箱验证码</string>
    <string name="bind_mail">绑定邮箱</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="modify_mail">修改邮箱</string>
    <string name="confirm_modify">确认修改</string>
    <string name="please_input_used_mail_auth_code">请输入旧邮箱验证码</string>
    <string name="bind_success">绑定成功</string>
    <string name="please_input_mail">请输入邮箱</string>
    <string name="please_input_mail_auth_code">请输入邮箱验证码</string>
    <string name="please_input_phone_auth_code">请输入手机验证码</string>
    <string name="please_open_camera_permission">请打开相机权限</string>
    <string name="sd_is_not_useful">sd卡不可使用</string>
    <string name="send">发送</string>
    <string name="gallery">相册</string>
    <string name="preview">预览</string>
    <string name="all_image">所有图片</string>
    <string name="save_to_the_gallery">是否保存到相册</string>
    <string name="image_save_to_">图片保存至%1$s</string>
    <string name="image_save_fail">图片保存失败</string>
    <string name="is_sure_delete_photo">要删除这张照片吗?</string>
    <string name="total_property_equivalent">总资产折合（BTC）</string>
    <string name="promoted_property_equivalent">推广返佣折合（BTC）</string>
    <string name="invite_num_x">共邀请用户\n%1$d人</string>
    <string name="language">语言</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="confirm_logout">要确定退出吗？</string>
    <string name="platform_introduction">平台介绍</string>
    <string name="company_introduction">公司介绍</string>
    <string name="service_agreement">服务协议</string>
    <string name="connect_customer_service">联系客服</string>
    <string name="version_updating">版本更新</string>
    <string name="version_x">V%1$s</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_image_hint">图片（选填，提供问题的截图）</string>
    <string name="x_faction_x">%1$d/%2$d</string>
    <string name="x_faction_str_x">%1$s/%2$s</string>
    <string name="feedback_hint">请描述问题发生的具体场景，最好附上截图说明</string>
    <string name="confirm_submit">确认提交</string>
    <string name="invite_activity_rules">1.最小提币数量为：XX\n2.申请提币前请您确保提币地址准确无误，交易一旦发送到区块链网络便不可撤回。\n3.您提币至上述地址后，需要整个网络节点的确认，X次网络确认后方可到账提币。\n4.请不要直接提币到ICO的众筹地址，这会导致您无法收取众筹到的数字资产。\n5.请务必确认电脑及浏览器安全，防止信息被篡改或泄露。</string>
    <string name="check_activity_rules">查看活动规则</string>
    <string name="join_now">马上入群</string>
    <string name="invite_code">邀请码</string>
    <string name="copy">复制</string>
    <string name="invite_buddies">邀请好友加入</string>
    <string name="create_customization_poster">生成专属海报</string>
    <string name="change_cash_pwd">修改资金密码</string>
    <string name="set_cash_pwd">设置资金密码</string>
    <string name="set_cash_pwd_success">资金密码设置成功</string>
    <string name="forget_cash_pwd">忘记资金密码?</string>
    <string name="confirm_set_cash_pwd">确认资金密码</string>
    <string name="send_sms_auth_code_phone_hint_x">已发送至您的手机号：%1$s，请注意查收</string>
    <string name="send_mail_auth_code_hint_x">已发送至您的邮箱：%1$s，请注意查收</string>
    <string name="the_two_passwords_differ">两次密码输入不一致</string>
    <string name="change_login_pwd">修改登录密码</string>
    <string name="please_input_sms_auth_code">请输入短信验证码</string>
    <string name="google_authenticator">Google认证</string>
    <string name="google_authenticator_code">谷歌验证码</string>
    <string name="please_input_google_authenticator_code">请输入谷歌验证码</string>
    <string name="gesture_pwd">手势密码</string>
    <string name="please_input_cash_pwd">请输入资金密码</string>
    <string name="cash_pwd">资金密码</string>
    <string name="set_cash_pwd_rules">注意：您的资金密码是用来交易和提现和账户安全设置，建议您不要设置与登录密码一致，由此产生的账户被盗，本站概不负责。</string>
    <string name="time">时间</string>
    <string name="sms_auth_code">短信验证码</string>
    <string name="one_min">1分</string>
    <string name="five_min">5分</string>
    <string name="thirty_min">30分</string>
    <string name="week_line">周线</string>
    <string name="month_line">月线</string>
    <string name="volume_x">数量(%1$s)</string>
    <string name="price_x">价格 (%1$s)</string>
    <string name="direction">方向</string>
    <string name="reminding_transaction">成交提醒</string>
    <string name="order_info">订单信息</string>
    <string name="trader_x">交易对象：%1$s</string>
    <string name="sell_price_x">卖出单价：%1$s</string>
    <string name="sell_amount_x">卖出数量：%1$s</string>
    <string name="otc_deal_fee_x">交易手续费：%1$s</string>
    <string name="total_deal_amount_x">实际交易金额：%1$s</string>
    <string name="confirm_buy">确认买入</string>
    <string name="pricing_method">计价方式</string>
    <string name="quick_exchange">快捷币币交易</string>
    <string name="switch_host">切换环境</string>
    <string name="pro">正式</string>
    <string name="test">测试</string>
</resources>