<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgF5"
    android:orientation="vertical">

    <com.songbai.futurex.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/safety_center"/>

    <com.songbai.futurex.view.IconTextRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/set_cash_pwd"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <com.songbai.futurex.view.IconTextRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/change_login_pwd"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <com.songbai.futurex.view.IconTextRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/google_authenticator"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <com.songbai.futurex.view.IconTextRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:rowText="@string/gesture_pwd"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>
</LinearLayout>