<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_r4"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <TextView
            android:id="@+id/topTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_info"
            android:textColor="@color/text22"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_common_shut_down"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text66"
            android:textSize="13sp"
            tools:text="@string/trader_x"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text66"
            android:textSize="13sp"
            tools:text="@string/sell_price_x"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text66"
            android:textSize="13sp"
            tools:text="@string/sell_amount_x"/>

        <TextView
            android:id="@+id/fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text66"
            android:textSize="13sp"
            tools:text="@string/otc_deal_fee_x"/>

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text66"
            android:textSize="13sp"
            tools:text="@string/total_deal_amount_x"/>

    </LinearLayout>

    <EditText
        android:id="@+id/cashPwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_f5_r4"
        android:hint="@string/please_input_with_draw_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/text66"
        android:textCursorDrawable="@drawable/cursor_primary"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/forgetCashPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_cash_pwd"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/btn_primary"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/confirm_buy"
        android:textColor="@android:color/white"/>
</LinearLayout>