<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.songbai.futurex.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/set_cash_pwd"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:text="@string/cash_pwd"
            android:textColor="@color/text22"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.songbai.futurex.view.PasswordEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:minHeight="50dp"
            android:paddingLeft="12dp"
            android:paddingRight="20dp"
            app:hasBottomSplitLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:maxCharNum="50"
            app:showPsdStrength="true"
            app:splitLineColor="@color/bgF5"
            app:textHint="@string/please_input_cash_pwd"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="确认密码"
            android:textColor="@color/text22"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/password"/>

        <com.songbai.futurex.view.PasswordEditText
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:minHeight="50dp"
            android:paddingLeft="12dp"
            android:paddingRight="20dp"
            app:hasBottomSplitLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:maxCharNum="50"
            app:splitLineColor="@color/bgF5"
            app:textHint="@string/confirm_set_cash_pwd"/>

        <TextView
            android:id="@+id/smsAuthCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/sms_auth_code"
            android:textColor="@color/text22"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"/>

        <EditText
            android:id="@+id/smsAuthCode"
            style="@style/SingleEditText"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:hint="@string/please_input_sms_auth_code"
            android:inputType="number"
            android:minHeight="50dp"
            app:layout_constraintEnd_toStartOf="@+id/sendAuthCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smsAuthCodeText"/>

        <TextView
            android:id="@+id/sendAuthCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/send_auth_code"
            android:textColor="@color/primary_disabled_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/smsAuthCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/smsAuthCode"/>

        <TextView
            android:id="@+id/googleAuthCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_authenticator_code"
            android:textColor="@color/text22"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@id/smsAuthCode"/>

        <EditText
            android:id="@+id/googleAuthCode"
            style="@style/SingleEditText"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:hint="@string/please_input_google_authenticator_code"
            android:inputType="number"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleAuthCodeText"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/sendAuthHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/text66"
        android:textSize="12sp"
        android:visibility="invisible"
        tools:text="@string/send_sms_auth_code_phone_hint_x"/>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_primary"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/set_cash_pwd_rules"
        android:textColor="@color/text66"
        android:textSize="12sp"/>
</LinearLayout>