<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgF5"
    android:orientation="vertical">

    <com.songbai.futurex.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/settings"/>

    <com.songbai.futurex.view.IconTextRow
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white_pressed_f5"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/language"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <com.songbai.futurex.view.IconTextRow
        android:id="@+id/pricingMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_pressed_f5"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/pricing_method"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <LinearLayout
        android:id="@+id/quickExchange"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_white_pressed_f5"
        android:gravity="center_vertical"
        android:paddingLeft="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quick_exchange"
            android:textColor="@color/text22"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/quickBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/switch_track"/>
    </LinearLayout>

    <View
        android:layout_width="12dp"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@+id/remindingTransaction"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_white_pressed_f5"
        android:gravity="center_vertical"
        android:paddingLeft="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reminding_transaction"
            android:textColor="@color/text22"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/pushBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/switch_track"/>

    </LinearLayout>

    <View
        android:layout_width="12dp"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <com.songbai.futurex.view.IconTextRow
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_pressed_f5"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/about_us"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <com.songbai.futurex.view.IconTextRow
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_pressed_f5"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/feedback"
        app:rowTextColor="@color/text22"
        app:rowTextSize="16sp"/>

    <LinearLayout
        android:id="@+id/hostGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:gravity="center"
            android:text="@string/switch_host"
            android:textColor="@color/text22"
            android:textSize="15sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <RadioButton
                android:id="@+id/pro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pro"/>

            <RadioButton
                android:id="@+id/test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/test"/>
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/input"/>
</LinearLayout>